# presidio-hardened-x402

./: .gitignore  PRESIDIO-REQ.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/x402/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
corpus/: README.md  corpus_meta.json  generate.py  schema.py
docker/: Dockerfile  sidecar_app.py
docs/: soc2-reference-architecture.md
dune/: README.md  query0_facilitator_list.sql  query2_volume_by_chain_project.sql  query2a_volume_base.sql  query2b_volume_polygon.sql  query2c_volume_other_chains.sql  query3_resolve_unknowns.sql
experiments/: evaluate.py  run_latency.py  run_sweep.py
experiments/results/: latency_results.json  sweep_results_both.jsonl
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
src/presidio_x402/: __init__.py  _types.py  audit_log.py  compliance_report.py  exceptions.py  gateway.py  metrics.py  mpa.py  pii_filter.py  policy_engine.py  replay_guard.py  screening_client.py  x402-policy-schema.json  x402_policy_schema.py
src/presidio_x402/adapters/: crewai.py  langchain.py
tests/: test_adapters.py  test_adversary_chains.py  test_audit_log.py  test_chain_03_audit_durability.py  test_chain_07_webhook_ssrf.py  test_compliance_report.py  test_gateway.py  test_gateway_remote_screening.py  test_metrics.py  test_mpa.py  test_pii_filter.py  test_policy_engine.py  test_policy_schema.py  test_replay_guard.py  test_screening_client.py
