[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-x402"
version = "0.3.0"
description = "Security middleware for x402 agentic payments — PII redaction, spending policy, and replay detection before blockchain commit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Presidio Security" }]
keywords = [
    "x402", "payments", "security", "pii", "presidio", "blockchain",
    "ai-agents", "micropayments", "hardening", "gdpr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Transitive of presidio-analyzer; pin minimum to evict 6 CVEs in 41.x
    # (CVE-2024-0727, CVE-2023-50782, GHSA-h4gh-qq45-vh27, PYSEC-2024-225,
    # CVE-2026-26007, CVE-2026-34073). Audit 2026-04-26.
    "cryptography>=46.0.6",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
redis = [
    "redis>=5.0.0",
]
langchain = [
    "langchain-core>=0.1.0",
]
crewai = [
    "crewai>=0.28.0",
]
prometheus = [
    "prometheus-client>=0.20.0",
]
schema = [
    "jsonschema>=4.21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "respx>=0.21.0",
    "fakeredis>=2.23",
    "prometheus-client>=0.20.0",
    "jsonschema>=4.21.0",
]

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-x402"
Repository = "https://github.com/presidio-v/presidio-hardened-x402"
Issues = "https://github.com/presidio-v/presidio-hardened-x402/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_x402"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short -q"

[tool.coverage.run]
source = ["src/presidio_x402"]

[tool.coverage.report]
fail_under = 90
show_missing = true
